src/z80asm/z80asm2/t/30-directive/expected/if_01.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/if_01.asm
Assembling t/30-directive/input/if_01.asm...
t/30-directive/input/if_01.asm:1:3: error: Expected expression after IF
    if ; no expression
      ^
t/30-directive/input/if_01.asm:3:4: error: Expected a value, got "*"
    if *1 ; syntax error in expression
       ^
t/30-directive/input/if_01.asm:5:4: error: ASMPC is not allowed in a constant expression
    if asmpc ; not constant expression
       ^
t/30-directive/input/if_01.asm:7:1: error: Unexpected ELSE directive without matching IF
    else ; else without if
    ^
t/30-directive/input/if_01.asm:8:1: error: Unexpected ELSEIF directive without matching IF
    elseif ; elseif without if
    ^
t/30-directive/input/if_01.asm:9:1: error: Unexpected ELIF directive without matching IF
    elif ; elif without if
    ^
t/30-directive/input/if_01.asm:10:1: error: Unexpected ENDIF directive without matching IF
    endif ; endif without if
    ^
t/30-directive/input/if_01.asm:13:1: error: Multiple ELSE in IF block
    else ; two elses
    ^
t/30-directive/input/if_01.asm:17:1: error: Unexpected ELSEIF directive after ELSE
    elseif ; elseif after else
    ^
t/30-directive/input/if_01.asm:21:1: error: Unexpected ELIF directive after ELSE
    elif ; elif after else
    ^
# file: t/30-directive/input/if_01.asm
EndOfLine	"\n"	23:1	
